--- a/ASEBook/src/styles/ForumurileMele.css
+++ b/ASEBook/src/styles/ForumurileMele.css
@@ -54,10 +54,7 @@
   transform: translateY(-3px);
 }
 
-.ForumurileMele-changeTitleButton,
-.ForumurileMele-saveButton,
-.ForumurileMele-cancelButton,
-.ForumurileMele-statusButton {
+.ForumurileMele-changeTitleButton {
   padding: 8px 15px;
   font-size: 1rem;
   cursor: pointer;
@@ -71,11 +68,80 @@
   box-shadow: 0 2px 5px rgba(238,46,49,0.6);
 }
 
+.ForumurileMele-statusButton-Deschis, .ForumurileMele-statusButton-Inchis{
+  padding: 8px 15px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 2px solid #090C08;
+  border-radius: 15px;
+  margin-right: 10px;
+  margin-top: 10px;
+  background-color: #090C08;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 5px rgba(238,46,49,0.6);
+}
+
+.ForumurileMele-statusButton-Deschis {
+  color:rgb(84, 238, 46)
+}
+
+.ForumurileMele-statusButton-Deschis:hover {
+  box-shadow: 0 4px 10px rgba(84, 238, 46,0.9);
+  transform: translateY(-3px);
+}
+
+.ForumurileMele-statusButton-Inchis {
+  color: rgb(238,46,49)
+}
+
+.ForumurileMele-statusButton-Inchis:hover {
+  box-shadow: 0 4px 10px rgba(238,46,49,0.9);
+  transform: translateY(-3px);
+}
+
+.ForumurileMele-cancelButton {
+  padding: 8px 15px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 2px solid #090C08;
+  border-radius: 15px;
+  margin-right: 10px;
+  margin-top: 10px;
+  background-color: #090C08;
+  color: #FFFBFE;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 5px rgba(238,46,49,0.6);
+}
+
+.ForumurileMele-saveButton {
+  padding: 8px 15px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 2px solid #090C08;
+  border-radius: 15px;
+  margin-right: 10px;
+  margin-top: 10px;
+  background-color: #090C08;
+  color: #FFFBFE;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 5px rgba(84, 238, 46, 0.6);
+}
+
+.ForumurileMele-saveButton:hover {
+  box-shadow: 0 4px 10px rgba(84, 238, 46, 0.9);
+  color: rgb(84, 238, 46);
+  transform: translateY(-3px);
+}
+
 .ForumurileMele-changeTitleButton:hover,
-.ForumurileMele-saveButton:hover,
-.ForumurileMele-cancelButton:hover,
 .ForumurileMele-statusButton:hover {
   box-shadow: 0 4px 10px rgba(238,46,49,0.9);
+  transform: translateY(-3px);
+}
+
+.ForumurileMele-cancelButton:hover {
+  box-shadow: 0 4px 10px rgba(238,46,49,0.9);
+  color: rgb(238,46,49);
   transform: translateY(-3px);
 }
 
