--- a/ASEBook/src/components/Profil-Preferinte/Preferinte.css
+++ b/ASEBook/src/components/Profil-Preferinte/Preferinte.css
@@ -1,6 +1,6 @@
 .preferinte-container {
-    width: 100%;
-    height: 70vh;  /* Increased height to make the table longer */
+    width: 20vw;
+    height: 75vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,12 +10,15 @@
 .preferinte-table-container {
     width: 100%;
     flex-grow: 1;
-    overflow-y: auto;  /* Allow vertical scrolling when content overflows */
+    overflow-y: auto;
+    overflow-x: none;
+
 }
 
 .tabel-preferinte {
     width: 100%;
     border-collapse: collapse;
+    overflow-x: none;
 }
 
 .tr-preferinte {
@@ -36,7 +39,7 @@
     font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
-    text-align: center;
+    text-align: left;
     transition: all 0.3s ease;
     min-width: 100px; /* Ensure buttons are wide enough to fit the text */
     white-space: nowrap;
@@ -77,7 +80,26 @@
     box-shadow: 0 8px 12px rgba(238, 46, 49, 0.6);
 }
 
-@media only screen and (max-width: 600px) {
+.buton-Actualizeaza {
+    padding: 10px 20px;
+    cursor: pointer;
+    border: 2px solid #090C08;
+    border-radius: 8px;
+    background-color: #FFFBFE;
+    color: #090C08;
+    margin: 10px;
+    transition: all 0.3s ease;
+    min-width: 130px; /* Slightly wider button */
+    text-align: center;
+}
+
+.buton-Actualizeaza:hover {
+    color: #4CAF50;
+    border-color: #4CAF50;
+    box-shadow: 0 8px 12px #4CAF50;
+}
+
+@media only screen and (max-width: 768px) {
     .preferinte-container {
         height: 60vh;  /* Adjusted height for smaller screens */
         padding: 10px;
