--- a/ASEBook/src/styles/CreeazaAnunt.css
+++ b/ASEBook/src/styles/CreeazaAnunt.css
@@ -39,6 +39,84 @@
   margin-bottom: 10px;
 }
 
+.CreeazaAnunt-container-genLiterar {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.p-genLiterar-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.p-genLiterar {
+  font-size: 1rem;
+  margin-bottom: 5px;
+  color: #090C08;
+  white-space: nowrap;
+}
+
+.genLiterar-dropdown-container {
+  position: relative;
+  display: inline-block;
+}
+
+.genuri-dropdown {
+  padding: 10px 15px;
+  border: 2px solid #090C08;
+  border-radius: 15px;
+  background-color: #FFFBFE;
+  color: #090C08;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 5px rgba(238,46,49,0.6);
+  align-self: stretch;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transform: translateY(5px);
+}
+
+.genuri-dropdown:hover {
+  box-shadow: 0 4px 10px rgba(238,46,49,0.9);
+  transform: translateY(-3px);
+}
+
+.genuri-content {
+  position: absolute;
+  top: 110%;
+  left: 0;
+  background-color: #FFFBFE;
+  border: 2px solid #090C08;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(238,46,49,0.6);
+  z-index: 100;
+  max-height: 200px; /* Ajustează în funcție de dimensiunea rândurilor */
+  overflow-y: auto; /* Permite scroll */
+  overflow-x: hidden;
+}
+
+.genuri-content table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.genuri-content td {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  white-space: nowrap; /* Previne textul să fie pe mai multe linii */
+}
+
+.genuri-content td:hover{
+  background-color: rgba(238,46,49,0.1);
+}
+
 .CreeazaAnunt-input {
   width: 100%;
   max-width: 30vw;
