Can now report forums, messages, marketplace items

--- a/ASEBook/src/components/MesajChat/MesajChat.css
+++ b/ASEBook/src/components/MesajChat/MesajChat.css
@@ -17,6 +17,11 @@
     margin-left: auto;
 }
 
+.MesajChat-mesaj-raport {
+    display: flex;
+    flex-direction: row;
+}
+
 .MesajChat-ImagineUser {
     width: 40px;
     height: 40px;
