Completed Administrator Dashboard

--- a/ASEBook/src/components/DashboardRaportDetails/DashboardRaportDetails.css
+++ b/ASEBook/src/components/DashboardRaportDetails/DashboardRaportDetails.css
@@ -36,6 +36,16 @@
     transform: translateY(-3px);
 }
 
+.Dashboard-image {
+    max-width: 70%;
+    padding: 12px;
+    border: 2px solid #090C08;
+    border-radius: 15px;
+    background-color: #FFFBFE;
+    box-shadow: 0 2px 5px rgba(238, 46, 49, 0.6);
+    word-break: break-word;
+}
+
 /* Responsive adjustments for smaller screens */
 @media screen and (max-width: 768px) {
     .DashboardRaportDetails-main-container {
