--- a/client/src/styles/ProfilPersonal.css
+++ b/client/src/styles/ProfilPersonal.css
@@ -16,7 +16,7 @@
     padding: 20px;
 }
 
-.container-Preferinte {
+.container-Profil-Preferinte {
     display: flex;
     flex-direction: column;
     align-items: center;
