--- a/client/src/components/Anunt/Anunt.css
+++ b/client/src/components/Anunt/Anunt.css
@@ -40,6 +40,11 @@
     font-size: 20px;
     font-weight: bold;
     color: #090C08;
+    cursor: pointer;
+}
+
+.anuntData-utilizator {
+    cursor: pointer;
 }
 
 .anunt-pret-negociabil {
