--- a/client/src/styles/VeziAnunt.css
+++ b/client/src/styles/VeziAnunt.css
@@ -34,6 +34,10 @@
   gap: 10px;
 }
 
+.VeziAnunt-p-utilizator {
+  cursor: pointer;
+}
+
 .VeziAnunt-p-date {
   font-size: 0.8rem;
   color: #090C08;
